--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "scripts": {
     "start": "nodemon ./bin/www"
   },
+  "engines": {
+    "node": "4.4.7"
+  },
   "dependencies": {
     "bluebird": "^3.4.1",
     "body-parser": "~1.15.1",
