--- a/config/config.json
+++ b/config/config.json
@@ -1,4 +1,5 @@
 {
+
   "development": {
     "username": "weiwen",
     "password": null,
@@ -14,10 +15,6 @@
     "dialect": "mysql"
   },
   "production": {
-    "username": "root",
-    "password": null,
-    "database": "database_production",
-    "host": "127.0.0.1",
-    "dialect": "mysql"
+    "use_env_variable": "CLEARDB_DATABASE_URL"
   }
 }
